--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -1,1 +1,15 @@
-<p>landing-page works!</p>
+<div class="container">
+  <form nz-form>
+    <h4>Erstellen eines neuen Raumes</h4>
+    <h5>Wie soll der Raum heißen?</h5>
+    <nz-form-item>
+      <nz-form-control [nzSpan]="8">
+        <input nz-input name="text" type="text" id="text">
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <button nz-button nzType="primary" nzSize="large" nzShape="round">Raum erstellen</button>
+    </nz-form-item>
+  </form>
+
+</div>
