functialllity for same user vote

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-landing-page></app-landing-page>
+<app-set-username-modal></app-set-username-modal>
 <app-vote-view></app-vote-view>
+<app-vote-selection></app-vote-selection>
