--- a/frontend/src/app/pages/vote-view/vote-view.component.html
+++ b/frontend/src/app/pages/vote-view/vote-view.component.html
@@ -1,10 +1,15 @@
 <div class="container">
-  <div class="point-option" *ngIf="votedAlready">
-    <h3>{{currentlySelectedValue}}</h3>
-  </div>
-  <div nz-row style="margin-top: 10vh">
-    <div nz-col *ngFor="let point of this.pointOptions" nzSpan="4" nzGutter="16">
-      <button class="point-option nz-gutter" (click)="onVoteClick(point)">{{point}}</button>
+
+  <div nz-row>
+    <div nz-col nzSpan="6" *ngFor="let player of this.playerService.allPlayers">
+      <nz-card [nzTitle]="player.name" >
+        <p>{{player.voteValue}}</p>
+      </nz-card>
     </div>
   </div>
+
+  <div>
+    <button nz-button nzType="danger" (click)="playerService.resetGame()">Reset</button>
+  </div>
 </div>
+
