added header for the applicaiton

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-set-username-modal></app-set-username-modal>
-<app-vote-view></app-vote-view>
-<app-vote-selection></app-vote-selection>
+<nz-layout>
+  <nz-header><span style="color: white">MyPaints Scrum Poker</span></nz-header>
+  <nz-content>
+    <app-set-username-modal></app-set-username-modal>
+    <app-vote-view></app-vote-view>
+
+  </nz-content>
+  <nz-footer>
+    <app-vote-selection></app-vote-selection>
+  </nz-footer>
+</nz-layout>
