--- a/frontend/src/app/pages/vote-view/vote-view.component.html
+++ b/frontend/src/app/pages/vote-view/vote-view.component.html
@@ -1,21 +1,20 @@
 <div class="container">
 
   <div nz-row [nzGutter]="[16, 24]">
-    <div nz-col nzSpan="6"  *ngFor="let player of this.playerService.allPlayers">
-     <!-- <nz-card [nzTitle]="player.name" >
-        <p>{{player.voteValue}}</p>
-      </nz-card> -->
+    <div nz-col nzSpan="6" *ngFor="let player of this.playerService.allPlayers">
+      <!-- <nz-card [nzTitle]="player.name" >
+         <p>{{player.voteValue}}</p>
+       </nz-card> -->
 
       <div style="text-align: center;">
         <img [src]="'assets/img/' + player.voteValue + '.png'" *ngIf="playerService.cardValueIsShown">
         <img src="assets/img/question.png" *ngIf="!playerService.cardValueIsShown">
         <br>
-        <span>{{player.name}}</span>
+        <span>{{player.name}}</span><i *ngIf="player.voteValue != 0" nz-icon nzType="check"></i>
       </div>
     </div>
   </div>
-
-  <div>
+  <div class=" control-panel">
     <button nz-button nzType="danger" (click)="playerService.resetGame()">Reset</button>
     <button nz-button nzType="danger" (click)="playerService.showCards()"> Flip Cards</button>
   </div>
