--- a/frontend/src/app/pages/vote-selection/vote-selection.component.html
+++ b/frontend/src/app/pages/vote-selection/vote-selection.component.html
@@ -1,9 +1,9 @@
-<div nz-row nzJustify="space-around" class="container-fluid">
-  <div nz-col nzSpan="3" *ngFor="let option of options">
+<div nz-row [nzGutter]="[8, 8]" nzJustify="space-around" class="container-fluid">
+  <div nz-col nzXs="8"  nzSm="8" nzMd="3" *ngFor="let option of options">
     <img [src]="option.picUrl" 
     (click)="playerService.sendVote(option.value)" 
     [alt]="option.value" 
-    [ngStyle]="{'border': option.value === this.playerService.currentSelfValue ? 'solid red': 'none'}">
+    [ngStyle]="{'border': option.value === this.playerService.currentSelfValue ? 'solid red 5px': 'none'}">
   </div>
 </div>
 
