--- a/frontend/src/app/pages/current-player-tag/current-player-tag.component.html
+++ b/frontend/src/app/pages/current-player-tag/current-player-tag.component.html
@@ -6,7 +6,7 @@
       <nz-tag *ngIf="player.voteValue != 0" [nzColor]="'green'">Abgestimmt</nz-tag>
     </nz-list-item>
   </nz-list>
-  <div>
+  <div style="margin-top: 2vh;">
     <button nz-button nzType="primary" (click)="playerService.resetVotes()">Neu Abstimmen</button>
     <button nz-button nzType="danger" [disabled]="this.playerService.cardValueIsShown"
             (click)="playerService.showCards()"> Flip Cards
@@ -15,5 +15,4 @@
   </div>
 </nz-card>
 <ng-template #extraTemplate>
-  <a>More</a>
 </ng-template>
