Implemented new Player structure

--- a/frontend/src/app/pages/result/result.component.html
+++ b/frontend/src/app/pages/result/result.component.html
@@ -3,7 +3,7 @@
 
   <ngx-charts-pie-chart
     [view]="view"
-    [scheme]="colorScheme"
+    [scheme]="'cool'"
     [results]="this.playerService.results"
     [gradient]="gradient"
     [legend]="showLegend"
